# mina-block-explorer

./: .env.example  .envrc  .gitignore  .gitmodules  Cargo.toml  Gemfile  Justfile  Justfile.dev  README.md  Rakefile  Trunk.toml  build.rs  bun.lockb  cypress.config.js  eslint.config.mjs  flake.nix  index.html  jest.config.js  package-lock.json  package.json  playwright.config.js  pnpm-lock.yaml  pull_request_template.md  rust-toolchain.toml  shell.nix  tailwind.config.js  tsconfig.json  vite.config.ts  wrangler.toml
.bundle/: config
.cargo/: audit.toml  config.toml
.flox/: env.json
.flox/env/: manifest.toml
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: node.js.yml  playwright.yml  rust.yml
.husky/: pre-commit
DOCS/: SITE_DOCS.md
app/: Cargo.toml  Justfile  flake.nix  index.html  main.rs  package.json  playwright.config.js  pnpm-lock.yaml
app/ops/: buildkite-pipeline.yaml
app/src/: account_page.rs  api_models.rs  latest_block_page.rs  main.rs  nav.rs  root.rs  snarks_page.rs  summary.rs  summary_item.rs  summary_page.rs  transactions_page.rs
app/tests/: account-summary-page.spec.js  latest-block-page.spec.js  summary-page.spec.js
assets/: manifest.webmanifest
assets/css/: output.css  styles.css
css/: styles.css
cypress/: devices.json  pages.json
cypress/e2e/: constants.js  helpers.js  latest-block-page.cy.js  navigate-to-account-page.cy.js  summary-page.cy.js
cypress/support/: commands.js  e2e.js  helpers.js
flakes/rust/: flake.nix
graphql/queries/: account_dialog.graphql  accounts.graphql  blocks.graphql  fee_transfers.graphql  internal_commands.graphql  next_stakes.graphql  next_staking_ledgers.graphql  snarks.graphql  stakes.graphql  staking_ledgers.graphql  token_holders.graphql  tokens.graphql  transactions.graphql
graphql/schemas/: mina-explorer.graphql
ops/: buildkite-pipeline.yaml  manage-processes-spec.rb  manage-processes.rb  test_rake_file.sh  validate-env.rb
pnpm/: jest.config.js  package.json  pnpm-lock.yaml  wrangler.toml
ruby/: Gemfile  doc-server.rb
ruby/spec/: spec_helper.rb
rust/: Cargo.toml  build.rs
rust/.cargo/: audit.toml
rust/graphql/queries/: account_dialog.graphql  accounts.graphql  blocks.graphql  internal_commands.graphql  snarks.graphql  staker_leaderboard.graphql  staking_ledgers.graphql  token_holders.graphql  tokens.graphql  transactions.graphql
rust/graphql/schemas/: mina-explorer.graphql
rust/src/: main.rs  root.rs
rust/src/account_activity/: components.rs  functions.rs  graphql.rs  mod.rs  models.rs  page.rs  table_traits.rs
rust/src/accounts/: components.rs  functions.rs  graphql.rs  mod.rs  page.rs  table_traits.rs
rust/src/analytics/: components.rs  functions.rs  mod.rs  models.rs  page.rs  table_traits.rs
rust/src/analytics/staker_leaderboard/: components.rs  functions.rs  graphql.rs  mod.rs  models.rs  page.rs  table_traits.rs
rust/src/blocks/: components.rs  functions.rs  graphql.rs  models.rs  page.rs  table_traits.rs
rust/src/broadcast/: mod.rs
rust/src/common/: components.rs  constants.rs  functions.rs  mod.rs  models.rs  search.rs  table.rs
rust/src/header/: navigation.rs
rust/src/icons/: mod.rs
rust/src/internal_commands/: components.rs  functions.rs  graphql.rs  table_traits.rs
rust/src/snarks/: components.rs  functions.rs  graphql.rs  page.rs  table_trait.rs
rust/src/stakes/: components.rs  functions.rs  graphql.rs  mod.rs  models.rs  page.rs  table_trait.rs
rust/src/summary/: components.rs  mod.rs  models.rs  page.rs
rust/src/token_holders/: functions.rs  graphql.rs  mod.rs
rust/src/tokens/: functions.rs  graphql.rs  mod.rs  page.rs  table_trait.rs
rust/src/user_commands/: components.rs  graphql.rs  models.rs  page.rs  table_trait.rs
scripts/: wait-for-port.sh  wait-on-port.js
spec/: spec_helper.rb
spec/features/: account_listing_symbol_spec.rb  account_spotlight_spec.rb  analytics_charts_spec.rb  analytics_filtering_spec.rb  footer_spec.rb  (+10 more)
src/: account_dialog.rs  account_page.rs  api_models.rs  config.rs  header.rs  index.html  latest_block_page.rs  main.rs  nav.rs  root.rs  snarks_page.rs  stakes_page.rs  summary_item.rs  summary_page.rs  table.rs  table_section.rs  transactions_page.rs
style/: output.css
tests/: account-summary-page.spec.js  general-accessibility.spec.ts  page-accounts.spec.ts  snarks-page.spec.js
trunk/: Trunk.toml  index.html  tailwind.config.js
(+357 files in other folders)
