[package]
name = "mina-block-explorer"
version = "0.1.0"
edition = "2021"

[dependencies]
rust_decimal = { version = "1.33.1", features = ["serde"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
leptos = { version = "0.6.9", features = ["csr"] }
leptos_router = { version = "0.6.9", features = ["csr"] }
chrono = { version = "0.4", features = ["serde"] }
graphql_client = { version = "0.13.0", features = ["reqwest"] }
url = "2.5.0"
leptos-use = { version = "0.10.10", features = ["serde"] }
console_error_panic_hook = "0.1.7"
charming = { version = "0.3.1", features = ["wasm"] }
gloo-timers = "0.3.0"
leptos_meta = { version = "0.6.9", features = ["csr"] }
rand = "0.8.5"
indoc = "2"
heck = "0.5.0"

[dependencies.web-sys]
version = "0.3"
features = [
  "Clipboard",
  "Window",
  "Navigator"
]

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
