[package]
name = "mina-block-explorer"
version = "0.1.0"
edition = "2021"

[dependencies]
rust_decimal = { version = "1.36.0", features = ["serde"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
leptos = { version = "0.6.15", features = ["csr"] }
leptos_router = { version = "0.6.15", features = ["csr"] }
chrono = { version = "0.4", features = ["serde"] }
graphql_client = { version = "0.14", features = ["reqwest"] }
url = "2.5.3"
leptos-use = { version = "0.13" }
codee = { version = "0.2", features = ["json_serde"] }
console_error_panic_hook = "0.1.7"
charming = { version = "0.3.1", features = ["wasm"] }
gloo-timers = "0.3.0"
leptos_meta = { version = "0.6.15", features = ["csr"] }
rand = "0.8.5"
indoc = "2"
heck = "0.5.0"
statrs = "0.17.1"

[dependencies.web-sys]
version = "0.3"
features = [
  "Clipboard",
  "Window",
  "Navigator"
]

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
