[package]
name = "mina-block-explorer"
version = "0.1.0"
edition = "2021"

[dependencies]
rust_decimal = { version = "1.36.0", default-features = false }
reqwest = { version = "0.11", default-features = false }
serde = { version = "1.0", features = ["derive"] }
leptos = { version = "0.6.15", default-features = false, features = ["csr"] }
leptos_router = { version = "0.6.15", default-features = false, features = ["csr"] }
chrono = { version = "0.4", features = ["serde"] }
graphql_client = { version = "0.14", features = ["reqwest"] }
leptos-use = { version = "0.13", default-features = false, features = ["storage","use_document_visibility","use_interval","use_debounce_fn","use_timeout_fn"] }
codee = { version = "0.2", features = ["json_serde"] }
console_error_panic_hook = "0.1.7"
charming = { version = "0.3.1", features = ["wasm"] }
leptos_meta = { version = "0.6.15", features = ["csr"] }
indoc = "2"
heck = "0.5.0"
statrs = { version = "0.17.1", default-features = false }
serde_json = "1.0.140"

[dependencies.web-sys]
version = "0.3"
features = [
  "Clipboard",
  "Window",
  "Navigator"
]

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
